--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,9 @@
-body {
+/*body {
 	-webkit-user-select: none; 
 	-moz-user-select: none; 
 	-khtml-user-select: none; 
 	user-select: none; 
-}
+}*/
 .section {
 	vertical-align: top;
 	background: url(../images/index.jpg) 0 0 no-repeat;
