--- a/style/index.css
+++ b/style/index.css
@@ -7,7 +7,7 @@
 .section {
 	/*vertical-align: top;*/
 	background: black url(../images/index.jpg) 0 0 no-repeat;
-	/*background-size: cover;*/
+	background-size: cover;
 	/*height: 100vh;*/
 	/*background-color: red;*/
 }
