--- a/style/index.css
+++ b/style/index.css
@@ -5,33 +5,135 @@ body {
 	user-select: none; 
 	background-color: #323232;
 }
-html,body,#wrapper,#section1 {
-	height: 100%;
-}
+/*html {
+	height: 100vh;
+	}*/
+	html,body,#wrapper,#section1 {
+		height: 100%;
+	}
 /*#section1 header a {
 	display: block;
 	height: auto;
-}*/
-#section1 header {
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-#section1 header img {
-	width: 100%;
-	display: block;
-}
+	}*/
+	#section1 header {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	#section1 header img {
+		width: 100%;
+		display: block;
+	}
 
-#section1 .main {
-	background: url(../images/section1bg.png) 0 0 no-repeat;
-	background-size: cover;
-	/*height: 100vh;*/
-	height: 100%;
-}
-#section1 .main p {
-	font-size: 27px;
-	padding-top: 20%;
-	color: white;
-	text-align: center;
-	font-weight: bold;
-}
+	#section1 .main {
+		background: url(../images/section1bg.png) 0 0 no-repeat;
+		background-size: cover;
+		/*height: 100vh;*/
+		height: 100%;
+	}
+	#section1 .main p {
+		font-size: 27px;
+		/*padding-top: 20%;*/
+		color: white;
+		text-align: center;
+		font-weight: bold;
+	}
+	footer {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		height: 60px;
+		padding: 5px;
+		width: 100%;
+		box-sizing: border-box;
+
+		/*height: 2px;*/
+	}
+	footer a {
+		display: block;
+		width: 100%;
+		line-height: 50px;
+		background-color: #fff;
+		text-align: center;
+		font-size: 20px;
+	}
+	footer span {
+		display: block;
+		width: 25px;
+		height: 25px;
+		position: absolute;
+		right: 30px;
+		top:15px;
+		border: 2px solid #1e63aa;
+		line-height: 28px;
+
+		border-radius: 25px;
+		/*margin-right: 30px;*/
+	}
+	footer a,footer a:visited {
+		color: #1e63aa;
+	}
+	.cehua-01 {
+
+		background: #5a77be;
+		/*background-size: 60%;*/
+		width: 33%;
+
+		height: 123.75px;
+		position: fixed;
+		left: 5px;
+		bottom: 60px;
+		text-align: center;
+
+	}
+	.cehua-01 img {
+		/*display: inline-block;*/
+		width: 45%;
+		/*line-height: 123.75px;*/
+		vertical-align: middle;
+		/*line-height: 123.75px; */
+	}
+	.cehua-01 a {
+		display: block;
+		/*display:table-cell;*/
+		vertical-align: middle;
+		width: 100%;
+		height: 100%;
+	}
+	.cehua-01 span {
+		color: #fff;
+		position: absolute;
+		bottom: 6px;
+		left: 8px;
+		font-size: 16px;
+		line-height: 1;
+	}
+	.cehua-01 a:after,.cehua-03 a:after,.cehua-02 a:after {
+		display: inline-block;
+		content:"";
+		height: 100%;
+		vertical-align: middle;
+	}
+	.cehua-02,.cehua-03 {
+		/*width: 16.5%;*/
+		background: #5a77be;
+	}
+	.cehua-03 {
+		position: fixed;
+		bottom: 60px;
+	}
+	.cehua-03 a,.cehua-02 a{
+		display: block;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		color: #fff;
+	}
+	.cehua-03 a:visited,.cehua-02 a{
+		color: #fff;
+	}
+	.cehua-02 {
+		position: fixed;
+	}
+
+
