--- a/homepage.css
+++ b/homepage.css
@@ -1,9 +1,9 @@
 body {
 	font-family: SimHei,'Helvetica Neue',Arial,'Droid Sans',sans-serif;
 }
-html,body,.categoryBody,.rootList,.categoryContent,.wrapper{
+html,body,.categoryBody,.rootList,.categoryContent{
 	height: 100%;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 div, span, a, header {
 	-webkit-tap-highlight-color: rgba(255,255,255,0);
@@ -88,7 +88,7 @@ li.active a,li.active a:visited{
 .wrapper {
 	/*overflow-y:scroll;*/
 /*	z-index: 2;*/
-	overflow:scroll;
+	/*overflow:scroll;*/
 	/*position: absolute;*/
 }
 /*.categoryContent {
