--- a/homepage.css
+++ b/homepage.css
@@ -98,6 +98,11 @@ li.active a,li.active a:visited{
 /*.categoryContent {
 	position: relative;
 }*/
+/*.rootList ul {
+	position: absolute;
+	top: 0;
+	left: 0;
+}*/
 
 
 
