--- a/homepage.css
+++ b/homepage.css
@@ -96,11 +96,11 @@ li.active a,li.active a:visited{
 /*.categoryContent {
 	position: relative;
 }*/
-/*.rootList ul {
+.rootList ul {
 	position: absolute;
 	top: 0;
 	left: 0;
-}*/
+}
 
 
 
