--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -101,6 +101,27 @@ li.active a,li.active a:visited{
 	top: 0;
 	left: 0;
 }
+#footer {
+/*	position: fixed;
+	bottom: 0;
+	left: 0;*/
+	font-size: 0;
+	width: 100%;
+	background: #fff;
+	padding: 5px 0;
+}
+#footer span {
+	display: inline-block;
+	font-size: 12px;
+	width: 25%;
+	text-align: center;
+}
+#footer b {
+	display: block;
+}
+#footer img {
+	display: inline-block;
+}
 
 
 
