--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -24,7 +24,7 @@ ul,li {
 	top:0;
 	left: 0;
 	width: 91px;
-	padding-bottom: 68px;
+	margin-bottom: 68px;
 }
 .rootList li {
 	width: 90px;
@@ -55,7 +55,7 @@ li.active a,li.active a:visited{
 .categoryContent {
 	margin:10px;
 	margin-left: 100px;
-	padding-bottom: 68px;
+	margin-bottom: 68px;
 }
 .bannerImg img {
 	width: 100%;
