--- a/style/index.css
+++ b/style/index.css
@@ -11,10 +11,6 @@ body {
 	html,body,#wrapper,#section1 {
 		height: 100%;
 	}
-/*#section1 header a {
-	display: block;
-	height: auto;
-	}*/
 	#section1 header {
 		position: absolute;
 		top: 0;
@@ -28,12 +24,10 @@ body {
 	#section1 .main {
 		background: url(../images/section1bg.png) 0 0 no-repeat;
 		background-size: cover;
-		/*height: 100vh;*/
 		height: 100%;
 	}
 	#section1 .main p {
 		font-size: 27px;
-		/*padding-top: 20%;*/
 		color: white;
 		text-align: center;
 		font-weight: bold;
@@ -46,8 +40,6 @@ body {
 		padding: 5px;
 		width: 100%;
 		box-sizing: border-box;
-
-		/*height: 2px;*/
 	}
 	footer a {
 		display: block;
@@ -68,7 +60,6 @@ body {
 		line-height: 28px;
 
 		border-radius: 25px;
-		/*margin-right: 30px;*/
 	}
 	footer a,footer a:visited {
 		color: #1e63aa;
@@ -76,46 +67,39 @@ body {
 	.cehua-01 {
 
 		background: #5a77be;
-		/*background-size: 60%;*/
 		width: 33%;
-
-		height: 123.75px;
 		position: fixed;
 		left: 5px;
 		bottom: 60px;
 		text-align: center;
 
 	}
-	.cehua-01 img {
-		/*display: inline-block;*/
+	.cehua-01 img,.sheji-01 img {
 		width: 45%;
-		/*line-height: 123.75px;*/
 		vertical-align: middle;
-		/*line-height: 123.75px; */
 	}
-	.cehua-01 a {
+	.cehua-01 a,.sheji-01 a{
 		display: block;
-		/*display:table-cell;*/
 		vertical-align: middle;
 		width: 100%;
 		height: 100%;
 	}
-	.cehua-01 span {
+	.cehua-01 span,.sheji-01 span {
 		color: #fff;
 		position: absolute;
 		bottom: 6px;
 		left: 8px;
 		font-size: 16px;
 		line-height: 1;
+		-webkit-transform: translateZ(0);
 	}
-	.cehua-01 a:after,.cehua-03 a:after,.cehua-02 a:after {
+	.cehua-01 a:after,.cehua-03 a:after,.cehua-02 a:after,.sheji-01 a:after{
 		display: inline-block;
 		content:"";
 		height: 100%;
 		vertical-align: middle;
 	}
 	.cehua-02,.cehua-03 {
-		/*width: 16.5%;*/
 		background: #5a77be;
 	}
 	.cehua-03 {
@@ -135,5 +119,12 @@ body {
 	.cehua-02 {
 		position: fixed;
 	}
+	.sheji-01 {
+		background: #e2ad2e;
+		position: fixed;
+		left: 5px;
+		width: 33%;
+		text-align: center;
 
+	}
 
