--- a/style/tech.css
+++ b/style/tech.css
@@ -45,6 +45,7 @@ header img {
 #sec-02 {
 	background-color: #5cad38;
 	padding: 30px 0 0 0;
+	position: relative;
 }
 section h3 {
 	width: 80px;
@@ -58,16 +59,42 @@ section h3 {
 }
 .display p {
 	width: 80%;
-	margin: 7px auto;
+	margin: 7px auto 20px;
 	text-align: center;
 	line-height: 2;
 }
-/*.display>div {
-	margin-top: 10px;
-}*/
+.bg-shadow {
+	height: 4px;
+	width: 100%;
+	background-color: #4e972f;
+	position: absolute;
+	top: 0;
+	left: 2px;
+	-webkit-transform: skew(30deg);
+	transform: skew(60deg);
+}
 
 
-
+#sec-02 .swiper-bg {
+	background: url(../images/tech_sec02_bg.png) 0 0 no-repeat;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	height: 400px;
+}
+#swiper-01 {
+	width: 100%;
+}
+#swiper-01 img {
+	width: 100%;
+}
+#sec-02 .swiper-bg>div {
+	width: 84%;
+	overflow: hidden;
+	margin: 0 auto;
+	position: relative;
+	left: 0.38%;
+	top: 2.8%;
+}
 
 
 
