--- a/style/tech.css
+++ b/style/tech.css
@@ -43,7 +43,7 @@ header img {
 	font-size: 20px;
 	display: inline-block;
 }
-#sec-02 {
+.display {
 	background-color: #5cad38;
 	padding: 30px 0 0 0;
 	position: relative;
@@ -75,7 +75,7 @@ section h3 {
 	transform: skew(60deg);
 }
 
-
+/* section2轮播 */
 #sec-02 .swiper-bg {
 	background: url(../images/tech_sec02_bg.png) 0 0 no-repeat;
 	-webkit-background-size: 100%;
@@ -96,11 +96,35 @@ section h3 {
 	margin: 0 auto;
 	position: relative;
 	left: 0.38%;
-	top: 4%;
+	top: 3.6%;
 }
-body::-webkit-scrollbar,html::-webkit-scrollbar {
+
+/* section3轮播 */
+
+#sec-03 .swiper-bg {
+	background: url(../images/tech_sec03_bg.png) 0 0 no-repeat;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	height: 400px;
+}
+#sec-03 .swiper-bg>div {
+	width: 27%;
+	overflow: hidden;
+	margin: 0 auto;
+	position: relative;
+	/*left: 0.38%;*/
+	top: 7%;
+	border: 1px solid red;
+}
+
+
+
+
+
+
+/*body::-webkit-scrollbar,html::-webkit-scrollbar {
 	display: none;
-}
+}*/
 
 
 
