--- a/style/tech.css
+++ b/style/tech.css
@@ -14,6 +14,9 @@ header img {
 	width: 100%;
 	display: block;
 }
+#tech {
+	background-color: #5cad38;
+}
 #sec-01 {
 	background: #fff url(../images/tech_sec01_bg.png) 20px 5px repeat;
 	padding: 25px 0 30px 25px;
@@ -64,6 +67,9 @@ section h3 {
 	text-align: center;
 	line-height: 2;
 }
+.display img {
+	width: 100%;
+}
 .bg-shadow {
 	height: 4px;
 	width: 100%;
@@ -87,9 +93,7 @@ section h3 {
 	background: #fff;
 	color: #000;
 }
-#swiper-01 img {
-	width: 100%;
-}
+
 #sec-02 .swiper-bg>div {
 	width: 84%;
 	overflow: hidden;
@@ -101,21 +105,36 @@ section h3 {
 
 /* section3轮播 */
 
-#sec-03 .swiper-bg {
+#sec-03 .swiper-bg,#sec-04 .swiper-bg {
 	background: url(../images/tech_sec03_bg.png) 0 0 no-repeat;
 	-webkit-background-size: 100%;
 	background-size: 100%;
 	height: 400px;
 }
-#sec-03 .swiper-bg>div {
+#sec-03 .swiper-bg>div,#sec-04 .swiper-bg>div {
 	width: 27%;
 	overflow: hidden;
 	margin: 0 auto;
 	position: relative;
 	/*left: 0.38%;*/
-	top: 7%;
-	border: 1px solid red;
+	/*top: 9%;*/
+	/*border: 1px solid red;*/
 }
+
+#sec-04 h3 img {
+	width: 35%;
+	margin-top: 23%;
+}
+#sec-04 p {
+	width: 85%;
+}
+#sec-03 .swiper-bg>div {
+	top: 10%;
+}
+#sec-04 .swiper-bg>div {
+	top: 8%;
+}
+
 
 
 
