--- a/style/tech.css
+++ b/style/tech.css
@@ -68,8 +68,8 @@ section h3 {
 	width: 100%;
 }
 .bg-shadow {
-font-size: 0;
-line-height: 0;
+	font-size: 0;
+	line-height: 0;
 }
 .bg-shadow img {
 	width: 100%;
@@ -106,13 +106,14 @@ line-height: 0;
 	height: 400px;
 }
 #sec-03 .swiper-bg>div,#sec-04 .swiper-bg>div {
-	width: 27%;
+	width: 26%;
 	overflow: hidden;
 	margin: 0 auto;
 	position: relative;
 	/*left: 0.38%;*/
 	/*top: 9%;*/
 	/*border: 1px solid red;*/
+	left: 0.2%;
 }
 
 #sec-04 h3 img {
@@ -123,12 +124,14 @@ line-height: 0;
 	width: 85%;
 }
 #sec-03 .swiper-bg>div {
-	top: 10%;
+	top: 12%;
 }
 #sec-04 .swiper-bg>div {
-	top: 8%;
+	top: 10%;
 }
-
+#sec-03,#sec-04 {
+	width: 100%;
+}
 
 
 
