--- a/style/tech.css
+++ b/style/tech.css
@@ -22,6 +22,7 @@ header img {
 	-moz-box-sizing:border-box; /* Firefox */
 	-webkit-box-sizing:border-box; /* Safari */
 	box-sizing: border-box;
+	background-size: 100%;
 	width: 100%;
 }
 #sec-01 img {
