--- a/style/base.css
+++ b/style/base.css
@@ -1,3 +1,13 @@
+/*reset全局字体样式*/
 body {
 	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
+}
+/*去掉iOS中元素被触摸时产生的半透明灰色遮罩，去掉部分android系统中元素被点击时产生的边框*/
+a,button,input,textarea{
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-user-modify:read-write-plaintext-only; 
+}
+/*禁止保存或拷贝图像，弹出菜单等*/
+a,img {
+	-webkit-touch-callout: none;
 }
