--- a/style/base.css
+++ b/style/base.css
@@ -5,9 +5,9 @@ body {
 /*去掉iOS中元素被触摸时产生的半透明灰色遮罩，去掉部分android系统中元素被点击时产生的边框*/
 a,button,input,textarea{
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-user-modify:read-write-plaintext-only; 
+    /*-webkit-user-modify:read-write-plaintext-only; */
 }
 /*禁止保存或拷贝图像，弹出菜单等*/
-a,img {
+/*a,img {
 	-webkit-touch-callout: none;
-}
+}*/
