--- a/style/base.css
+++ b/style/base.css
@@ -11,3 +11,19 @@ a,button,input,textarea{
 /*a,img {
 	-webkit-touch-callout: none;
 }*/
+/*.loading {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background: #fff;
+	z-index: 2000;
+}*/
+.loading img {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+}
