--- a/style/base.css
+++ b/style/base.css
@@ -11,19 +11,22 @@ a,button,input,textarea{
 /*a,img {
 	-webkit-touch-callout: none;
 }*/
-/*.loading {
-	position: absolute;
+.loading {
+	position: fixed;
 	left: 0;
 	right: 0;
-	bottom: 0;
-	top: 0;
-	background: #fff;
+/*	bottom: 0;
+	top: 0;*/
+	width: 100%;
+	height: 100%;
+	background: #333;
 	z-index: 2000;
-}*/
-.loading img {
+}
+.loading-gif {
 	position: fixed;
 	top: 50%;
 	left: 50%;
 	-webkit-transform: translate(-50%,-50%);
 	transform: translate(-50%,-50%);
+	z-index: 2001
 }
