--- a/style/base.css
+++ b/style/base.css
@@ -4,29 +4,42 @@ body {
 }
 /*去掉iOS中元素被触摸时产生的半透明灰色遮罩，去掉部分android系统中元素被点击时产生的边框*/
 a,button,input,textarea{
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    /*-webkit-user-modify:read-write-plaintext-only; */
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	/*-webkit-user-modify:read-write-plaintext-only; */
 }
 /*禁止保存或拷贝图像，弹出菜单等*/
 /*a,img {
 	-webkit-touch-callout: none;
-}*/
-.loading {
-	position: fixed;
-	left: 0;
-	right: 0;
+	}*/
+	.loading {
+		/*position: fixed;*/
+/*	left: 0;
+right: 0;*/
 /*	bottom: 0;
-	top: 0;*/
+top: 0;*/
+/*	left:0;right:0;margin-left:auto;margin-right:auto;
 	width: 100%;
 	height: 100%;
 	background: #333;
+	z-index: 2000;*/
+}
+.loading {
+	/*display: none;*/
+	position: fixed;
+	top: 0;
+	left: 0;
 	z-index: 2000;
+	width: 100%;
+	height: 100%;
+	background: #333;
+	-webkit-transform: translateZ(0);
 }
 .loading-gif {
-	position: fixed;
-	top: 50%;
+	position:absolute;
+	top: 150px;
 	left: 50%;
-	-webkit-transform: translate(-50%,-50%);
-	transform: translate(-50%,-50%);
-	z-index: 2001
+	-webkit-transform: translate(-50%);
+	transform: translate(-50%);
+	width: 100%;
+	z-index: 2001;
 }
