--- a/style/base.css
+++ b/style/base.css
@@ -11,35 +11,34 @@ a,button,input,textarea{
 /*a,img {
 	-webkit-touch-callout: none;
 	}*/
+/*	.loading {
+		position: fixed;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		top: 0;
+		left:0;right:0;margin-left:auto;margin-right:auto;
+		width: 100%;
+		height: 100%;
+		background: #333;
+		z-index: 2000;
+	}*/
 	.loading {
-		/*position: fixed;*/
-/*	left: 0;
-right: 0;*/
-/*	bottom: 0;
-top: 0;*/
-/*	left:0;right:0;margin-left:auto;margin-right:auto;
-	width: 100%;
-	height: 100%;
-	background: #333;
-	z-index: 2000;*/
-}
-.loading {
-	/*display: none;*/
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 2000;
-	width: 100%;
-	height: 100%;
-	background: #333;
-	-webkit-transform: translateZ(0);
-}
-.loading-gif {
-	position:absolute;
-	top: 150px;
-	left: 50%;
-	-webkit-transform: translate(-50%);
-	transform: translate(-50%);
-	width: 100%;
-	z-index: 2001;
-}
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 2000;
+		width: 100%;
+		height: 100%;
+		background: #333;
+		-webkit-transform: translateZ(0);
+	}
+	.loading-gif {
+		position:absolute;
+		top: 130px;
+		left: 50%;
+		-webkit-transform: translate(-50%);
+		transform: translate(-50%);
+		width: 100%;
+		z-index: 2001;
+	}
