--- a/style/base.css
+++ b/style/base.css
@@ -24,6 +24,7 @@ a,button,input,textarea{
 		z-index: 2000;
 	}*/
 	.loading {
+		display: block;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -32,6 +33,7 @@ a,button,input,textarea{
 		height: 100%;
 		background: #333;
 		-webkit-transform: translateZ(0);
+			/*background: rgba(0,0,0,0.4);*/
 	}
 	.loading-gif {
 		position:absolute;
@@ -42,3 +44,12 @@ a,button,input,textarea{
 		width: 100%;
 		z-index: 2001;
 	}
+/*	.back {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;*/
+	/*background:url(../images/share.png) no-repeat 90% -7%;*/
+}
