--- a/style/tech.css
+++ b/style/tech.css
@@ -1,7 +1,7 @@
 body {
 	color: #fff;
 	background-color: #5cad38;
-	-webkit-transform:translate3d(0,0,0);
+	/*-webkit-transform:translate3d(0,0,0);*/
 }
 h2,h3,h4 {
 	margin: 0;
