--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ background-size: cover;
 	display: block;
 	width: 100%;
 }
-.slide5>div,.slide6>div{
+.wordwrap,.slide6>div{
 	background: #fff;
 	opacity: 0.8;
 	position: absolute;
@@ -93,4 +93,57 @@ background-size: cover;
 	position: absolute;
 	top: 0;
 	left: 0;
+}
+.u-arrow-bottom {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    z-index: 150;
+    width: 24px;
+    height: 14px;
+    margin-left: -7px;
+}
+.u-arrow-bottom img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -7px 0 0 -14px;
+    width: 24px;
+    height: 14px;
+    background-position: 0 -82px;
+    -webkit-animation: start 1.5s infinite ease-in-out;
+    -moz-animation: start 1.5s infinite ease-in-out;
+    animation: start 1.5s infinite ease-in-out;
+}
+@-webkit-keyframes start {
+	0%,30% {
+		opacity: 0;
+		-webkit-transform: translate(0,10px)
+	}
+
+	60% {
+		opacity: 1;
+		-webkit-transform: translate(0,0)
+	}
+
+	100% {
+		opacity: 0;
+		-webkit-transform: translate(0,-8px)
+	}
+}
+@keyframes start {
+	0%,30% {
+		opacity: 0;
+		transform: translate(0,10px)
+	}
+
+	60% {
+		opacity: 1;
+		transform: translate(0,0)
+	}
+
+	100% {
+		opacity: 0;
+		transform: translate(0,-8px)
+	}
 }
