--- a/css/index.css
+++ b/css/index.css
@@ -20,18 +20,31 @@ background-size: cover;
 	position: absolute;
 	top: 35%;
 }
-.slide2 .slide2-wrap {
-/*	position: absolute;
-	top: 40%;
-*/
+.slide2 .slide2-wrap>div {
+	position: relative;
+}
+.slide2 .bg1 {
+	border-bottom: 1px #6d6d6d solid;
 }
 .slide2 .slide2-wrap img {
 	display: block;
 	width: 100%;
 }
-/*.slide2 .p2-word {
-	border-bottom: #6d6d6d 1px solid;
-}*/
+.slide2 .p2-word {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+
+}
+.slide2 .p2-word2,.slide2 .p2-word3 {
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+.slide2 .p2-word2 {
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
 .slide3 {
 	-webkit-background-size: cover;
 	background-size: cover;
@@ -91,57 +104,57 @@ background-size: cover;
 	position: absolute;
 	top: 0;
 	left: 0;
-}*/
-.u-arrow-bottom {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    z-index: 150;
-    width: 24px;
-    height: 14px;
-    margin-left: -7px;
-}
-.u-arrow-bottom img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -7px 0 0 -14px;
-    width: 24px;
-    height: 14px;
-    background-position: 0 -82px;
-    -webkit-animation: start 1.5s infinite ease-in-out;
-    -moz-animation: start 1.5s infinite ease-in-out;
-    animation: start 1.5s infinite ease-in-out;
-}
-@-webkit-keyframes start {
-	0%,30% {
-		opacity: 0;
-		-webkit-transform: translate(0,10px)
+	}*/
+	.u-arrow-bottom {
+		position: absolute;
+		bottom: 10px;
+		left: 50%;
+		z-index: 150;
+		width: 24px;
+		height: 14px;
+		margin-left: -7px;
 	}
+	.u-arrow-bottom img {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin: -7px 0 0 -14px;
+		width: 24px;
+		height: 14px;
+		background-position: 0 -82px;
+		-webkit-animation: start 1.5s infinite ease-in-out;
+		-moz-animation: start 1.5s infinite ease-in-out;
+		animation: start 1.5s infinite ease-in-out;
+	}
+	@-webkit-keyframes start {
+		0%,30% {
+			opacity: 0;
+			-webkit-transform: translate(0,10px)
+		}
 
-	60% {
-		opacity: 1;
-		-webkit-transform: translate(0,0)
-	}
+		60% {
+			opacity: 1;
+			-webkit-transform: translate(0,0)
+		}
 
-	100% {
-		opacity: 0;
-		-webkit-transform: translate(0,-8px)
+		100% {
+			opacity: 0;
+			-webkit-transform: translate(0,-8px)
+		}
 	}
-}
-@keyframes start {
-	0%,30% {
-		opacity: 0;
-		transform: translate(0,10px)
-	}
+	@keyframes start {
+		0%,30% {
+			opacity: 0;
+			transform: translate(0,10px)
+		}
 
-	60% {
-		opacity: 1;
-		transform: translate(0,0)
-	}
+		60% {
+			opacity: 1;
+			transform: translate(0,0)
+		}
 
-	100% {
-		opacity: 0;
-		transform: translate(0,-8px)
+		100% {
+			opacity: 0;
+			transform: translate(0,-8px)
+		}
 	}
-}
