--- a/css/index.css
+++ b/css/index.css
@@ -72,12 +72,12 @@ background-size: cover;
 	display: block;
 	width: 100%;
 }*/
-.slide3 .avatar>img {
+/*.slide3 .avatar>img {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 220px;
-}
+}*/
 .slide3 .p3-bg {
 	width: 100%;
 	position: relative;
