--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,12 @@ background-size: cover;
 	top: 4%;
 	left: 3%;
 }
+/*.test {
+	position: absolute;
+	width: 100%;
+	top:0;
+	left: 0;
+}*/
 /*.slide3 .word {
 	position: absolute;
 	top: 48%;
@@ -89,12 +95,14 @@ background-size: cover;
 	top: 15%;
 	z-index: 20;
 	width: 100%;
+	left: 0;
 }
 .slide3 .p3-para {
 	position: absolute;
 	width: 100%;
 	top: 25%;
 	z-index: 20;
+	left: 0;
 }
 /*.slide3 .avatar img:first-child {
 	z-index: 
