--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,6 @@
 body {
 	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
 }
-.swiper-container {
-	height: 100%;
-}
 .slide1 {
 	background: #fff url(../images/page1-bg.jpg) 0 0 no-repeat;
 	-webkit-background-size: cover;
@@ -129,12 +126,22 @@ body {
 .slide6 .footer>a {
 	display: block;
 	width: 100%;
+	color: #343434;
+	text-align: center;
+}
+.slide6 .footer>a:visited {
+	color: #343434;
 }
 .slide6 .footer>p {
 	text-align: center;
 	margin: 0;
 	width: 100%;
 	color: #343434;
+	margin-top: 3%;
+}
+
+.slide6 .footer>img {
+	width: 100%;
 }
 
 .slide6 .t1 {
@@ -153,8 +160,8 @@ body {
 .slide6 #finger {
 	position: absolute;
 	width: 7%;
-	right: 26%;
-	top: 13%;
+	right: 22%;
+	top: 50%;
 	-webkit-animation: righttoleft 0.5s infinite;
 	animation: righttoleft 0.5s infinite;
 }
@@ -211,12 +218,21 @@ body {
 		transform: translate(0,-8px)
 	}
 }
-@keyframes righttoleft {
+@webkit-keyframes righttoleft {
 	0%,100%{
-		right: 26%;
+		right: 22%;
 	}
 
 	50% {
-		right: 24%;
+		right: 20%;
+	}
+}
+@keyframes righttoleft {
+	0%,100%{
+		right: 22%;
+	}
+
+	50% {
+		right: 20%;
 	}
 }
