--- a/style/product.css
+++ b/style/product.css
@@ -80,3 +80,7 @@ html,body,#wrapper,#section1 {
 .contact span:last-child {
 	width: 80%;
 }
+.contact p:first-child {
+	text-align: center;
+	margin-bottom: 10px;
+}
