--- a/css/index.css
+++ b/css/index.css
@@ -8,11 +8,35 @@ a,img {
 	-webkit-touch-callout:none;
 }
 html,body,.swiper-container {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
-#silde1 {
+#slide1 {
 	background: #fff url(../images/start.jpg) 0 0 no-repeat;
 	-webkit-background-size: cover;
 	background-size: cover;
+	position: 
+}
+#slide1 .circle {
+	display: block;
+	position: absolute;
+}
+#s1-c1 {
+	width: 40%;
+	left: 25%;
+	-webkit-animation: rotate1 3s infinite linear;
+	animation: rotate1 3s infinite linear;
+}
+#s1-c2 {
+	width: 25%;
+}
+#s1-c3 {
+	width: 30%;
+}
+@-webkit-keyframes rotate1{
+	/*0% {}*/
+}
+@keyframes rotate1 {	
+	0%{ transform:rotate(0deg); }
+	100%{ transform:rotate(-360deg); }
 }
