--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,7 @@ html,body,.swiper-container {
 
 /*slide2*/
 
-#slide2,#slide3,#ani,#slide4,#slide5{
+#slide2,#slide3,#ani,#slide4,#slide5,#slide6{
 	background: #000 url(../images/background.jpg) 0 0 no-repeat;
 	-webkit-background-size: cover;
 	background-size: cover;
@@ -245,5 +245,73 @@ html,body,.swiper-container {
 	top: 24%;
 }
 #s5-go {
-	top: 68%;
+	top: 71%;
+}
+
+
+/*slide6*/
+#s6-title {
+	position: absolute;
+	width: 30%;
+	top: 20px;
+	left: 8%;
+}
+#s6-main {
+	position: relative;
+	/*margin-top: 20%;*/
+	width: 70%;
+	margin: 30% auto 0;
+}
+#s6-circle {
+	position: absolute;
+	width: 84%;
+	top: 9%;
+	left: 8%;
+}
+#s6-word1 {
+	position: absolute;
+	width: 52%;
+	top: 26%;
+	left: 23%;
+}
+#s6-lt {
+	width: 100%;
+}
+#s6-rb {
+	width: 100%;
+}
+#s6-main>img {
+	display: block;
+	margin: 0;
+	padding: 0;
+}
+.s6-btn {
+	width: 15%;
+	display: inline-block;
+	position: absolute;
+	top: 0;
+}
+.s6-btn img:first-child {
+	width: 100%;
+}
+#s6-btn-wrapper {
+	width: 100%;
+	position: absolute;
+	top: 67%;
+	left: 0;
+}
+.s6-btn img:last-child {
+	width: 60%;
+	position: absolute;
+	top: 34%;
+	left: 20%;
+}
+#s6-tech {
+	left: 20%;
+}
+#s6-design {
+	left: 44%;
+}
+#s6-planning {
+	left: 68%;
 }
